feat: file and metadata retrieving functionality
